package fr.uga.miage.m1.my_project.server.models.enums;

public enum EtatJoueur {
    EN_MENU,
    EN_ATTENTE,
    EN_PARTIE
}
